--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ h11==0.14.0 ; python_version >= '3.7'
 idna==3.4 ; python_version >= '3.5'
 outcome==1.3.0.post0 ; python_version >= '3.7'
 pysocks==1.7.1
+python-dotenv==1.0.0
 selenium==4.15.2
 sniffio==1.3.0 ; python_version >= '3.7'
 sortedcontainers==2.4.0
