--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 -i https://pypi.org/simple
 attrs==23.1.0 ; python_version >= '3.7'
+better-exceptions==0.3.3
 certifi==2023.7.22 ; python_version >= '3.6'
 exceptiongroup==1.1.3 ; python_version < '3.11'
 h11==0.14.0 ; python_version >= '3.7'
@@ -12,5 +13,5 @@ sniffio==1.3.0 ; python_version >= '3.7'
 sortedcontainers==2.4.0
 trio==0.23.1 ; python_version >= '3.8'
 trio-websocket==0.11.1 ; python_version >= '3.7'
-urllib3[socks]==2.0.7 ; python_version >= '3.7'
+urllib3[socks]==2.1.0 ; python_version >= '3.8'
 wsproto==1.2.0 ; python_full_version >= '3.7.0'
